--- a/TobyTurnbull/week_01/Homework/template/index.html
+++ b/TobyTurnbull/week_01/Homework/template/index.html
@@ -6,6 +6,8 @@
 		<script src="js/ex1.js"></script>
 		<script src="js/ex2.js"></script>
 		<script src="js/ex3.js"></script>
+		<script src="js/ex4.js"></script>
+		<script src="js/ex5.js"></script>
 	</head>
 	<body>
 		<h2>Please open the console to see the output</h2>
