--- a/TobyTurnbull/week_01/Homework/template/index.html
+++ b/TobyTurnbull/week_01/Homework/template/index.html
@@ -13,3 +13,17 @@
 		<h2>Please open the console to see the output</h2>
 	</body>
 </html>
+
+<div>
+	<p></p>
+</div>
+
+<div class="sidebar">
+	<ul>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
+</div>
