--- a/TobyTurnbull/week_04/homework/Movie/views/home.erb
+++ b/TobyTurnbull/week_04/homework/Movie/views/home.erb
@@ -1,4 +1,4 @@
-<form action="/result">
-  <input type="text" name="symbol" placeholder="Enter Movie Name" autofocus>  
+<form action="/movie">
+  <input type="text" name="symbol" class="access" placeholder="Enter Movie Name" autofocus>  
   <button>Get Info</button>
 </form>
