--- a/TobyTurnbull/week_04/homework/Movie/views/layout.erb
+++ b/TobyTurnbull/week_04/homework/Movie/views/layout.erb
@@ -7,16 +7,9 @@
 </head>
 <body>
     <div class="container">
-
-  <nav>
-    <a href="views/home.erb">Home</a>
-  </nav>
+    <div class="access">
   
 <%= yield %> 
-
-    <footer>
-      &copy; Copyright Toby 2015 -- Ayyyyye 
-    </footer>
 
   </div>
 </body>
