--- a/TobyTurnbull/week_04/homework/Movie/views/movie.erb
+++ b/TobyTurnbull/week_04/homework/Movie/views/movie.erb
@@ -1,1 +1,2 @@
-<p> The poster for  <%= @symbol %> is <%= @poster %> </p>
+<div><p class="doin" > The poster for  <%= @symbol %> is: </p></div>
+<img class="dimg" src="<%= @poster %>""
