movies not working yo

--- a/TobyTurnbull/week_04/homework/Movie/views/movie.erb
+++ b/TobyTurnbull/week_04/homework/Movie/views/movie.erb
@@ -1,2 +1,4 @@
 <div><p class="doin" > The poster for  <%= @symbol %> is: </p></div>
-<img class="dimg" src="<%= @poster %>""
+<img class="dimg" src="<%= @poster %>"
+<img class="dimg" src="<%= @movie.poster %>"
+
